sort.basic.bubble.AlgBubbleSort1.scala.error
Erreur de compilation :
AlgBubbleSort1:6: error: n is already defined as variable n
  var n=getNombreValeurs()
      ^